--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
-    "dev": "tailwindcss -i ./src/main.css -o ./public/build/style.css --watch"
+    "dev": "tailwindcss -i ./public/main.css -o ./public/build/style.css --watch"
   }
 }
